--- a/SalesWebMvc/appsettings.json
+++ b/SalesWebMvc/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SalesWebMvcContext": "Server=(localdb)\\mssqllocaldb;Database=SalesWebMvcContext-6e23fdf9-cc45-4961-b13c-4a081008d045;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "SalesWebMvcContext": "server=localhost;userid=teste;password=123456789sena;database=saleswebmvcappdb"
   }
 }
